
### Security and authentication

-   SNI support (including automatic certificate selection)
-   ALPN support in mod_net_multiplex
-   DANE support in low-level network layer
-   Direct TLS support (c2s and incoming s2s)
-   SCRAM-SHA-256
-   Direct TLS (including https) certificates updated on reload
-   Pluggable authorization providers (mod_authz_)

### HTTP

-   CORS handling now provided by mod_http
-   Built-in HTTP server now handles HEAD requests
-   Uploads can be handled incrementally

### API

-   Module statuses (API change)
-   util.error for encapsulating errors
-   Promise based API for sending queries
-   API for adding periodic tasks
-   More APIs supporting ES6 Promises

### Other

-   Plugin installer
-   MUC presence broadcast controls
-   MUC: support for XEP-0421 occupant identifiers
-   `prosodyctl check connectivity` via observe.jabber.network
-   libunbound for DNS queries

## Changes

-   Improved rules for mobile optimizations
-   Improved rules for what messages should be archived
-   mod_limits: Exempted JIDs
-   mod_server_contact_info now loaded on components if enabled
-   Statistics now based on OpenMetrics
-   Statistics scheduling can be done by plugin
-   Offline messages aren't sent to MAM clients
-   Archive quotas (means?)
-   Rewritten migrator with archive support
-   Improved automatic certificate locating and selecting
-   Logging to syslog no longer missing startup messages

## Removed

-   `daemonize` option deprecated
-   SASL DIGEST-MD5 removed
-   mod_auth_cyrus (older LDAP support)
-   Network backend server_select deprecated (not actually removed yet)

0.11.0
======

**2018-11-18**

New features
------------

-   Rewritten more extensible MUC module
    -   Store inactive rooms to disk
    -   Store rooms to disk on shutdown
    -   Voice requests
    -   Tombstones in place of destroyed rooms
-   PubSub features
    -   Persistence
    -   Affiliations
    -   Access models
    -   "publish-options"